--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,9 +107,10 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
         # Checkout code from git
-            - checkout
+        - checkout
         # Restore from cache
         # Your job code here
+        - run:
             cd frontend
             npm install
             ## npm install oauth-sign@^0.9.0
@@ -121,9 +122,10 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
         # Checkout code from git
-            - checkout
+        - checkout
         # Restore from cache
         # Your job code here
+        - run:
             cd backend
             npm install
             ## npm install oauth-sign@^0.9.0
