--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,6 +251,7 @@ jobs:
           command: |
             # Your code here
             cd backend
+            npm install
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
       - run:
