--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -327,9 +327,9 @@ jobs:
       - run:
           name: Install aws dependencies
           command: |
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
+            yum install -y tar gzip curl
+            curl -sL https://rpm.nodesource.com/setup_10.x | bash -
+            yum install -y nodejs      
       - run:
           name: Install Ansible
           command: |
