--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -327,9 +327,9 @@ jobs:
       - run:
           name: Install aws dependencies
           command: |
-            yum install -y tar gzip curl
+            npm install -y tar gzip curl
             curl -sL https://rpm.nodesource.com/setup_10.x | bash -
-            yum install -y nodejs      
+            npm install -y nodejs      
       - run:
           name: Install Ansible
           command: |
