--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,8 +325,9 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
-          name: Install aws dependencies
+          name: Install dependencies
           command: |
+            # your code here
             apk add --update --no-cache tar      
             apk add --update --no-cache gzip
             apk add --update --no-cache nodejs
@@ -335,29 +336,18 @@ jobs:
             apk add --update --no-cache ansible
             apk add --update --no-cache curl
       - run:
-          name: Install Ansible
-          command: |
-            sudo apt update
-            sudo apt install software-properties-common -y
-            sudo add-apt-repository --yes --update ppa:ansible/ansible
-            sudo apt install ansible -y
-#              pip install --upgrade
-      - run:
           name: Deploy backend
           command: |
             # your code here
-            cd backend # echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
-            npm i
+            cd backend
+            npm install
             npm run build
             cd ..
-            # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
-            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml -v
+            ansible-playbook -i inventory.txt deploy-backend.yml
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
