--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -398,13 +398,13 @@ jobs:
             echo $URL
             if curl -s ${URL} | grep "Welcome"
             then
-              exit 0
+              exit 1
             else
               exit 1
             fi
       # Here's where you will add some code to rollback on failure
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # - destroy-environment:
+          # workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   # cloudfront-update:
     # docker:
