--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -11,6 +11,8 @@
 
 - name: "Install dependencies"
   shell: |
+    sudo apt update
+    sudo apt-get install -y npm
     cd ~/backend-app
     npm i
 
