--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -15,6 +15,18 @@
     sudo apt-get install -y npm
     cd ~/backend-app
     npm i
+  environment:
+    ENVIRONMENT: production
+    NODE_ENV: production
+    TYPEORM_CONNECTION: postgres
+    TYPEORM_MIGRATIONS_DIR: ./src/migrations
+    TYPEORM_ENTITIES: ./src/modules/**/*.entity.ts
+    TYPEORM_MIGRATIONS: ./src/migrations/*.ts
+    TYPEORM_HOST: database-1.cbu4bvtiwda2.us-west-2.rds.amazonaws.com
+    TYPEORM_PORT: 5432
+    TYPEORM_USERNAME: postgres1
+    TYPEORM_PASSWORD: khanhvinh
+    TYPEORM_DATABASE: postgres
 
 - name: "Start backend application with PM2"
   shell: |
