--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -19,6 +19,7 @@
     sudo apt-get install -y npm
     cd ~/backend-app
     npm i
+    npm install -g ts-node
   environment:
     ENVIRONMENT: production
     NODE_ENV: production
