--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,15 @@
 version: 2.1
 
+parameters:
+  workflow_id:
+    type: string
+    default: '${CIRCLE_WORKFLOW_ID:0:7}'
+    
 commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
-      # Add parameter here   
+      # Add parameter here
       workflow_id:
         type: string
         default: ${CIRCLE_WORKFLOW_ID:0:7}
@@ -47,7 +52,7 @@ commands:
               npm run migrations:revert
             fi
             
-jobs:   
+jobs:
   build-frontend:
     docker:
       - image: circleci/node:13.8.0
@@ -56,7 +61,7 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Build front-end
+          name: Frontend build
           command: |
             # Your code here
             cd frontend
@@ -74,12 +79,12 @@ jobs:
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Back-end build
+          name: Backend build
           command: |
-            # Your code here
-            cd backend
-            npm install
-            npm run build
+             # Your code here
+             cd backend
+             npm install
+             npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -92,6 +97,8 @@ jobs:
       # Checkout code from git
       - checkout
       # Restore from cache
+      - restore_cache:
+          keys: [ frontend-build ]
       # Your job code here
       - run:
           name: Run frontend tests
@@ -108,6 +115,8 @@ jobs:
       # Checkout code from git
       - checkout
       # Restore from cache
+      - restore_cache:
+          keys: [ backend-build ]
       # Your job code here
       - run:
           name: Run backend tests
@@ -124,6 +133,8 @@ jobs:
       # Checkout code from git
       - checkout
       # Restore from cache
+      - restore_cache:
+          keys: [ frontend-build ]
       # Your job code here
       - run:
           name: Scan frontend dependencies
@@ -142,6 +153,8 @@ jobs:
       # Checkout code from git
       - checkout
       # Restore from cache
+      - restore_cache:
+          keys: [ backend-build ]
       # Your job code here
       - run:
           name: Scan backend dependencies
@@ -165,9 +178,9 @@ jobs:
           command: |
             aws cloudformation deploy \
             --template-file .circleci/files/backend.yml \
+            --tags project=udapeople \
             --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
-            --tags project=udapeople
+            --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
       - run:
           name: Ensure front-end infrastructure exist
           command: |
@@ -203,8 +216,7 @@ jobs:
       # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints:
-            - "41:2d:9c:72:db:51:54:73:2c:c9:99:bf:6f:e2:06:86:10:a3:22:f0"
-      # attach workspace
+            - "8d:3e:53:3f:96:70:3d:53:80:e4:eb:08:23:19:9e:8f"
       - attach_workspace:
           at: ~/
       - run:
@@ -216,6 +228,8 @@ jobs:
             apk add --update --no-cache ansible
             apk add --update --no-cache aws-cli
             apk add --update --no-cache curl
+      - restore_cache:
+          keys: [ backend-build ]
       - run:
           name: Configure server
           command: |
@@ -234,10 +248,13 @@ jobs:
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/backend
       # Here's where you will add some code to rollback on failure      
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-     
 
   run-migrations:
     docker:
@@ -246,6 +263,10 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
+      - attach_workspace:
+          at: ~/
+      - restore_cache:
+          keys: [ backend-build ]
       - run:
           name: Install dependencies
           command: |
@@ -259,7 +280,6 @@ jobs:
           command: |
             # Your code here
             cd backend
-            npm install
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
       - run:
@@ -273,7 +293,6 @@ jobs:
      # Here's where you will add some code to rollback on failure      
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-
   deploy-frontend:
     docker:
       # Docker image here that supports AWS CLI
@@ -295,17 +314,15 @@ jobs:
           name: Get backend url
           command: |
             # your code here
-            export BACKEND_PUBLIC_IP=$(aws --region us-west-2 ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicDnsName' --output text)
-            export API_URL="http://${BACKEND_PUBLIC_IP}:3030"
-            echo "${API_URL}"
-            echo API_URL="http://${BACKEND_PUBLIC_IP}:3030" >> frontend/.env
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+            --output text)
+            echo $BACKEND_IP
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo $API_URL
+            echo "API_URL=$API_URL" >> frontend/.env
             cat frontend/.env
-      
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/frontend/.env
-      
       - run:
           name: Deploy frontend objects
           command: |
@@ -315,40 +332,38 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      # Here's where you will add some code to rollback on failure  
+      # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}          
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
                     
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
-      - image: cimg/python:3.7-node
+      - image: python:3.7-alpine3.16
     steps:
       # Checkout code from git
-      - checkout       
+      - checkout
+      - restore_cache:
+          keys: [ backend-build ]
       # Add ssh keys with fingerprint
       - add_ssh_keys:
-          fingerprints: ["8d:3e:53:3f:96:70:3d:53:80:e4:eb:08:23:19:9e:8f"]
-      # attach workspace
+          fingerprints:
+            - '8d:3e:53:3f:96:70:3d:53:80:e4:eb:08:23:19:9e:8f'
       - attach_workspace:
           at: ~/
-
       - run:
-          name: Install aws dependencies
+          name: Install dependencies
           command: |
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
-      - run:
-          name: Install Ansible
-          command: |
-            sudo apt update
-            sudo apt install software-properties-common -y
-            sudo add-apt-repository --yes --update ppa:ansible/ansible
-            sudo apt install ansible -y
-#              pip install --upgrade
+            # your code here
+            apk add --update --no-cache tar      
+            apk add --update --no-cache gzip
+            apk add --update --no-cache nodejs
+            apk add --update --no-cache npm
+            apk add --update --no-cache aws-cli
+            apk add --update --no-cache ansible
+            apk add --update --no-cache curl
       - run:
           name: Deploy backend
           command: |
@@ -365,15 +380,15 @@ jobs:
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      # Here's where you will add some code to rollback on failure  
+      # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}          
-          
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
   smoke-test:
     docker:
-      # Lightweight Docker image 
+      # Lightweight Docker image
       - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
@@ -422,45 +437,111 @@ jobs:
               exit 1
             fi
       # Here's where you will add some code to rollback on failure
-      # - destroy-environment:
-          # workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      # - revert-migrations:
-          # workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
-  # cloudfront-update:
-    # docker:
-      # # Docker image here that supports AWS CLI
-    # steps:
-      # # Checkout code from git
-      # - run:
-          # name: Install dependencies
-          # command: |
-            # # your code here
-      # - run:
-          # name: Update cloudfront distribution
-          # command: |
-            # # your code here
-      # # Here's where you will add some code to rollback on failure  
+  cloudfront-update:
+    docker:
+      # Docker image here that supports AWS CLI
+      - image: circleci/node:13.8.0
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+            sudo apt install -y tar gzip curl
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip -qq awscliv2.zip
+            sudo ./aws/install
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            # your code here
+            export OldWorkflow_ID=$(aws cloudformation \
+            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+            --no-paginate --output text)
+            echo $OldWorkflow_ID > ~/OldWorkflow_ID.txt
+            cat ~/OldWorkflow_ID.txt
+            
+            aws cloudformation deploy \
+            --template-file .circleci/files/cloudfront.yml \
+            --stack-name InitialStack \
+            --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+            --tags project=udapeople
+            
+            echo "OldWorkflow_ID: ${OldWorkflow_ID}"
+            echo "Current Workflow Id: ${CIRCLE_WORKFLOW_ID:0:7}"
+      # Here's where you will add some code to rollback on failure
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
-# cleanup:
-    # docker:
-      # # Docker image here
-    # steps:
-      # # Checkout code from git
-      # - run:
-          # name: Get old stack workflow id
-          # command: |
-            # # your code here
-            # export OldWorkflowID="the id here"
-            # export STACKS=[] #put the list of stacks here
-      # - run:
-          # name: Remove old stacks and files
-          # command: |
+  configure-prometheus:
+    docker:
+      - image: python:3.7-alpine3.16
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - '8d:3e:53:3f:96:70:3d:53:80:e4:eb:08:23:19:9e:8f'
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update aws-cli
+            apk add --update tar
+            apk add --update gzip
+            apk add --update ansible
+            apk add --update nodejs
+            apk add --update npm
+            apk add --update curl
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Setup Prometheus Node Exporter
+          command: |
+            cd .circleci/ansible
+            cat inventory.txt
+            ansible-playbook -i inventory.txt node-exporter.yml
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+  cleanup:
+    docker:
+      # Docker image here
+      - image: amazon/aws-cli
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Fetching OldStack Workflow ID
+          command: |
+            # your code here
+            echo "I temporarily disable these command below, it will be uncommented once pass the review phase"
+            # export OldWorkflowID=$(aws cloudformation \
+            # list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+            # --no-paginate --output text)
+            # echo OldWorkflowID: "${OldWorkflowID}"
+            # echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+            # export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+            # --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+            # echo Stack names: "${STACKS[@]}"
             # if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             # then
-              # # your code here
+              # your code here
+            #   echo "----------------------Delete Confirmed-------------------------------------"
+            #   aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+            #   aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+            #   aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            # else
+            #   echo "----------------------Cannot Cleanup---------------------------------------"
             # fi
-            
 
 workflows:
   default:
@@ -480,8 +561,10 @@ workflows:
           filters:
             branches:
               only: [master]
-      - configure-infrastructure:
+      - configure-prometheus:
           requires: [deploy-infrastructure]
+      - configure-infrastructure:
+          requires: [configure-prometheus]
       - run-migrations:
           requires: [configure-infrastructure]
       - deploy-frontend:
@@ -491,6 +574,6 @@ workflows:
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
-          # requires: [smoke-test]
+         # requires: [smoke-test]
       # - cleanup:
-          # requires: [cloudfront-update]
+          # requires: [cloudfront-update, configure-prometheus]
