--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -564,7 +564,7 @@ workflows:
       # - configure-prometheus:
           # requires: [deploy-infrastructure]
       - configure-infrastructure:
-          requires: [configure-prometheus]
+          # requires: [configure-prometheus]
       - run-migrations:
           requires: [configure-infrastructure]
       - deploy-frontend:
