--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -523,26 +523,25 @@ jobs:
       - run:
           name: Fetching OldStack Workflow ID
           command: |
-            # your code here
-            echo "I temporarily disable these command below, it will be uncommented once pass the review phase"
-            # export OldWorkflowID=$(aws cloudformation \
-            # list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-            # --no-paginate --output text)
-            # echo OldWorkflowID: "${OldWorkflowID}"
-            # echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-            # export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-            # --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-            # echo Stack names: "${STACKS[@]}"
-            # if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-            # then
-              # your code here
-            #   echo "----------------------Delete Confirmed-------------------------------------"
-            #   aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-            #   aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-            #   aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-            # else
-            #   echo "----------------------Cannot Cleanup---------------------------------------"
-            # fi
+            your code here
+            export OldWorkflowID=$(aws cloudformation \
+            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+            --no-paginate --output text)
+            echo OldWorkflowID: "${OldWorkflowID}"
+            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+            --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+            echo Stack names: "${STACKS[@]}"
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            then
+              your code here
+              echo "----------------------Delete Confirmed-------------------------------------"
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            else
+              echo "----------------------Cannot Cleanup---------------------------------------"
+            fi
 
 workflows:
   default:
@@ -576,5 +575,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
          requires: [smoke-test]
-      # - cleanup:
-          # requires: [cloudfront-update, configure-prometheus]
+      - cleanup:
+          requires: [cloudfront-update, configure-prometheus]
