--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -576,4 +576,4 @@ workflows:
       - cloudfront-update:
          requires: [smoke-test]
       - cleanup:
-          requires: [cloudfront-update, configure-prometheus]
+          requires: [cloudfront-update]
