--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -507,6 +507,7 @@ jobs:
           command: |
             cd .circleci/ansible
             cat inventory.txt
+            export ansible_host_key_checking= false
             ansible-playbook -i inventory.txt node-exporter.yml
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
